tdf#102507 Left aligned denominator

In denominator, move blanks at the end of string
to have denominator left aligned

Change-Id: Ic7ce45dc1ba8c343232a0d4fa1bed2bde58a0bc2